--- a/HTML/Kursova/kursova.html
+++ b/HTML/Kursova/kursova.html
@@ -216,7 +216,7 @@
                     <div class="people-photos">
                         <img src="img/face/women.jpg" alt="" class="people-img">
                         <img src="img/face/men.jpg" alt="" class="people-img">
-                        <img src="img/face/women big.jpg" alt="" class="people-big-img">
+                        <img src="img/face/women big.jpg" alt="" class="people-img">
                         <img src="img/face/women2.jpg" alt="" class="people-img">
                         <img src="img/face/men2.jpg" alt="" class="people-img">
                     </div>
@@ -232,42 +232,43 @@
                             <input class="input" type="text" name="name" placeholder="Name">
                             <input class="input" type="email" name="email" placeholder="Email">
                             <input class="input" type="text" name="subject" placeholder="Subject">
-                            <textarea class="textarea" name="message" cols="" rows="10"></textarea>
-                            <button class="form-btn" type="submit">submit</button>
+                            <textarea class="textarea" name="message" cols="" rows="10"
+                                placeholder="Your Message"></textarea>
                         </form>
+                        <a class="btn form-btn" href="#">submit</a>
                     </div>
                     <div class="contact-client">
                         <h2 class="contact-title">our happy client</h2>
                         <div class="contact-logo">
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Zara_Logo.svg#zara"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Mango_Logo.svg#mango"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Barneys_New_York_Logo.svg#New_York"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Gucci_Logo.svg#gucci"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Calvin_klein_logo.svg#calvin"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Nike_Logo.svg#nike"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Converse_logo.svg#converse"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Puma_Logo.svg#puma"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Levi's_logo.svg#levis"></use>
                                 </svg></a>
                             <a href="#" class="contact-icon"><svg class="contact-svg">
-                                    <use href=""></use>
+                                    <use href="icon/Billabong_Logo.svg#billabong"></use>
                                 </svg></a>
                         </div>
                     </div>
@@ -281,7 +282,7 @@
                 <div class="footer-left">
                     <div class="logo">
                         <a href="" class="logo-icon"><svg class="logo-svg">
-                                <use href=""></use>
+                                <use href="icon/Vector.svg#vector"></use>
                             </svg></a>
                         <h2 class="logo-title">tajam</h2>
                     </div>
@@ -293,15 +294,15 @@
                 <div class="footer-center">
                     <h2 class="footer-title">our studio</h2>
                     <div class="adress">
-                        <a href="#" class="adress-icon"><svg class="adress-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="adress-svg">
+                                <use href="icon/kaplia.svg#kaplia"></use>
                             </svg></a>
                         <p class="adress-text">Ruko cucruk, Jl. Radio luar dalem jos No.12-13, Kalideres - Jakarta Barat
                             11480 - Indonesia</p>
                     </div>
                     <div class="adress">
-                        <a href="#" class="adress-icon"><svg class="adress-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="adress-svg">
+                                <use href="icon/phone.svg#phone"></use>
                             </svg></a>
                         <p class="adress-text">(+62) 21-2224 3333</p>
                     </div>
@@ -310,8 +311,8 @@
                     <h2 class="footer-title">stay in touch</h2>
                     <form action="#" class="footer-form">
                         <input class="footer-input" type="text" name="text" placeholder="Subscribe our newsletter">
-                        <a href="#" class="footer-btn"><svg class="form-svg">
-                                <use href=""></use>
+                        <a href="#" class="footer-btn"><svg class="btn-svg">
+                                <use href="icon/paper.svg#paper"></use>
                             </svg></a>
                     </form>
                     <div class="footer-icons">
