--- a/HTML/Kursova/kursova.html
+++ b/HTML/Kursova/kursova.html
@@ -316,23 +316,23 @@
                             </svg></a>
                     </form>
                     <div class="footer-icons">
-                        <a href="#" class="footer-icon"><svg class="footer-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="footer-svg">
+                                <use href="icon/facebook.svg#face"></use>
                             </svg></a>
-                        <a href="#" class="footer-icon"><svg class="footer-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="footer-svg">
+                                <use href="icon/twitter.svg#twitter"></use>
                             </svg></a>
-                        <a href="#" class="footer-icon"><svg class="footer-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="footer-svg">
+                                <use href="icon/dribbble.svg#drible"></use>
                             </svg></a>
-                        <a href="#" class="footer-icon"><svg class="footer-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="footer-svg">
+                                <use href="icon/instagram.svg#insta"></use>
                             </svg></a>
-                        <a href="#" class="footer-icon"><svg class="footer-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="footer-svg">
+                                <use href="icon/gplus.svg#gplus"></use>
                             </svg></a>
-                        <a href="#" class="footer-icon"><svg class="footer-svg">
-                                <use href=""></use>
+                        <a href="#"><svg class="footer-svg">
+                                <use href="icon/youtube.svg#youtube"></use>
                             </svg></a>
                     </div>
                 </div>
