--- a/HTML/Kursova/kursova.html
+++ b/HTML/Kursova/kursova.html
@@ -49,7 +49,7 @@
     <main class="content">
         <div class="wrapper-about">
             <div class="container">
-                <div class="about">
+                <section class="about">
                     <img class="about-img" src="img/Replace with your logo.jpg" alt="big logo">
                     <div class="about-article">
                         <h2 class="about-title">our story</h2>
@@ -63,22 +63,22 @@
                             quaerat maxime est? Dolorum error quas blanditiis!</p>
                         <a href="#" class="btn about-btn">learn more</a>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
         <div class="wrapper-video">
             <div class="container">
-                <div class="video">
+                <section class="video">
                     <a href="#" class="video-icon"><svg class="video-svg">
                             <use href="icon/Play Icon.svg#Player"></use>
                         </svg></a>
                     <h3 class="video-title">watch our story</h3>
-                </div>
+                    </section>
             </div>
         </div>
         <div class="wrapper-expertise">
             <div class="container">
-                <div class="expertise">
+                <section class="expertise">
                     <h2 class="expertise-title">expertise</h2>
                     <p class="expertise-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur,
                         necessitatibus?</p>
@@ -132,12 +132,12 @@
                                 ratione! Sit repellat neque corrupti perspiciatis!</p>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
         <div class="wrapper-team">
             <div class="container">
-                <div class="team">
+                <section class="team">
                     <h2 class="team-title">meet our amazing team</h2>
                     <p class="team-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nobis?</p>
                     <div class="body-team">
@@ -172,17 +172,17 @@
                     </div>
                     <p class="team-down-text">Become part of our dream team, let's join us!</p>
                     <a href="#" class="btn team-btn">we are hiring</a>
-                </div>
+                </section>
             </div>
         </div>
         <div class="wrapper-works">
             <div class="container">
-                <div class="works">
+                <section class="works">
                     <div class="works-header">
                         <h2 class="works-title">our works</h2>
                         <a href="#" class="works-project">See All Project in dribbble &gt</a>
                     </div>
-                </div>
+                </section>
             </div>
             <div class="works-gallery">
                 <img src="" alt="" class="works-img img1">
@@ -202,7 +202,7 @@
         </div>
         <div class="wrapper-people">
             <div class="container">
-                <div class="people">
+                <section class="people">
                     <a href="" class="people-icon"><svg class="people-svg">
                             <use href="icon/Lapku.svg#lapku"></use>
                         </svg></a>
@@ -220,12 +220,12 @@
                         <img src="img/face/women2.jpg" alt="" class="people-img">
                         <img src="img/face/men2.jpg" alt="" class="people-img">
                     </div>
-                </div>
+                </section>
             </div>
         </div>
         <div class="wrapper-contact">
             <div class="container">
-                <div class="contact">
+                <section class="contact">
                     <div class="contact-form">
                         <h2 class="contact-title">give us a good news</h2>
                         <form action="#" class="form">
@@ -272,7 +272,7 @@
                                 </svg></a>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
     </main>
