--- a/HTML/Kursova/kursova.html
+++ b/HTML/Kursova/kursova.html
@@ -37,12 +37,16 @@
                     Architecto a asperiores ullam blanditiis ipsa enim consectetur molestias necessitatibus beatae dicta
                     numquam, incidunt quisquam libero? Reiciendis officia maiores impedit error!</p>
                 <a href="#" class="btn promo-btn">learn more</a>
-                <div class="promo-radio">
-                    <label class="radio-label"><input class="radio-btn" type="radio" name="radio"></label>
-                    <label class="radio-label"><input class="radio-btn" type="radio" name="radio"></label>
-                    <label class="radio-label"><input class="radio-btn" type="radio" name="radio"></label>
-                    <label class="radio-label"><input class="radio-btn" type="radio" name="radio"></label>
-                </div>
+                <ul class="promo-radio">
+                    <li class="promo-item"><input class="radio-btn" type="radio" id="radio-1" name="radio">
+                        <label class="radio-label" for="radio-1"></label></li>
+                    <li class="promo-item"><input class="radio-btn" type="radio" id="radio-2" name="radio">
+                        <label class="radio-label" for="radio-2"></label></li>
+                    <li class="promo-item"><input class="radio-btn" type="radio" id="radio-3" name="radio">
+                        <label class="radio-label" for="radio-3"></label></li>
+                    <li class="promo-item"><input class="radio-btn" type="radio" id="radio-4" name="radio">
+                        <label class="radio-label" for="radio-4"></label></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -73,7 +77,7 @@
                             <use href="icon/Play Icon.svg#Player"></use>
                         </svg></a>
                     <h3 class="video-title">watch our story</h3>
-                    </section>
+                </section>
             </div>
         </div>
         <div class="wrapper-expertise">
@@ -83,54 +87,54 @@
                     <p class="expertise-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur,
                         necessitatibus?</p>
                     <div class="expertise-gallery">
-                        <div class="expertise-element">
+                        <article class="expertise-element">
                             <a href="#" class="expertise-icon"><svg class="expertise-svg">
                                     <use href="icon/monitor.svg#monitor"></use>
                                 </svg></a>
                             <h3 class="element-title">web design & development</h3>
                             <p class="element-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, vel
                                 iure eaque perspiciatis veniam alias.</p>
-                        </div>
-                        <div class="expertise-element">
+                        </article>
+                        <article class="expertise-element">
                             <a href="#" class="expertise-icon"><svg class="expertise-svg">
                                     <use href="icon/penslik.svg#penslik"></use>
                                 </svg></a>
                             <h3 class="element-title">branding identity</h3>
                             <p class="element-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus,
                                 ratione! Sit repellat neque corrupti perspiciatis!</p>
-                        </div>
-                        <div class="expertise-element">
+                        </article>
+                        <article class="expertise-element">
                             <a href="#" class="expertise-icon"><svg class="expertise-svg">
                                     <use href="icon/smartfon.svg#smartfon"></use>
                                 </svg></a>
                             <h3 class="element-title">mobile app</h3>
                             <p class="element-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus,
                                 ratione! Sit repellat neque corrupti perspiciatis!</p>
-                        </div>
-                        <div class="expertise-element">
+                        </article>
+                        <article class="expertise-element">
                             <a href="#" class="expertise-icon"><svg class="expertise-svg">
                                     <use href="icon/oval.svg#oval"></use>
                                 </svg></a>
                             <h3 class="element-title">search engine optimization</h3>
                             <p class="element-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus,
                                 ratione! Sit repellat neque corrupti perspiciatis!</p>
-                        </div>
-                        <div class="expertise-element">
+                        </article>
+                        <article class="expertise-element">
                             <a href="#" class="expertise-icon"><svg class="expertise-svg">
                                     <use href="icon/calculator.svg#calculator"></use>
                                 </svg></a>
                             <h3 class="element-title">game development</h3>
                             <p class="element-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus,
                                 ratione! Sit repellat neque corrupti perspiciatis!</p>
-                        </div>
-                        <div class="expertise-element">
+                        </article>
+                        <article class="expertise-element">
                             <a href="#" class="expertise-icon"><svg class="expertise-svg">
                                     <use href="icon/heart.svg#heart"></use>
                                 </svg></a>
                             <h3 class="element-title">made with love</h3>
                             <p class="element-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus,
                                 ratione! Sit repellat neque corrupti perspiciatis!</p>
-                        </div>
+                        </article>
                     </div>
                 </section>
             </div>
@@ -185,18 +189,18 @@
                 </section>
             </div>
             <div class="works-gallery">
-                <img src="" alt="" class="works-img img1">
-                <img src="" alt="" class="works-img img2">
-                <img src="" alt="" class="works-img img3">
-                <img src="" alt="" class="works-img img4">
-                <img src="" alt="" class="works-img img5">
-                <img src="" alt="" class="works-img img6">
-                <img src="" alt="" class="works-img img7">
-                <img src="" alt="" class="works-img img8">
-                <img src="" alt="" class="works-img img9">
-                <img src="" alt="" class="works-img img10">
-                <img src="" alt="" class="works-img img11">
-                <img src="" alt="" class="works-img img12">
+                <div class="works-img img1"></div>
+                <div class="works-img img2"></div>
+                <div class="works-img img3"></div>
+                <div class="works-img img4"></div>
+                <div class="works-img img5"></div>
+                <div class="works-img img6"></div>
+                <div class="works-img img7"></div>
+                <div class="works-img img8"></div>
+                <div class="works-img img9"></div>
+                <div class="works-img img10"></div>
+                <div class="works-img img11"></div>
+                <div class="works-img img12"></div>
             </div>
             <a href="#" class="btn works-btn">load more</a>
         </div>
