--- a/HTML/Products/homework4.html
+++ b/HTML/Products/homework4.html
@@ -27,56 +27,56 @@
                 <h2 class="section-title">FEATURED PRODUCTS</h2>
                 <div class="body-gallery">
                     <figure class="figure">
-                        <img src="img/product1@1X.png" alt="1" class="figure-img">
+                        <img src="img/Sidexis 4 - Viewer.lnk-1.png" alt="1" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">Blue Tshirt</p>
                             <p class="price">$26</p>
                         </figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="img/product2@1X.png" alt="2" class="figure-img">
+                        <img src="img/Sidexis 4 - Viewer.lnk-2.png" alt="2" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">WOMAN shirt</p>
                             <p class="price">$31</p>
                         </figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="img/product3@1X.png" alt="3" class="figure-img">
+                        <img src="img/Sidexis 4 - Viewer.lnk.png" alt="3" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">YELLOW Tshirt</p>
                             <p class="price">$21</p>
                         </figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="img/product4@1X.png" alt="4" class="figure-img">
+                        <img src="img/TeamViewer.lnk-1.png" alt="4" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">Cool lingerie</p>
                             <p class="price">$56</p>
                         </figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="img/product5@1X (1).png" alt="5" class="figure-img">
+                        <img src="img/TeamViewer.lnk-2.png" alt="5" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">Blue Tshirt</p>
                             <p class="price">$26</p>
                         </figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="img/product6@1X.png" alt="6" class="figure-img">
+                        <img src="img/Rectangle 50.png" alt="6" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">WOMAN shirt</p>
                             <p class="price">$31</p>
                         </figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="img/product8@1X.png" alt="7" class="figure-img">
+                        <img src="img/TeamViewer.lnk.png" alt="7" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">YELLOW Tshirt</p>
                             <p class="price">$21</p>
                         </figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="img/product9@1X.png" alt="8" class="figure-img">
+                        <img src="img/AIMP.lnk-1.png" alt="8" class="figure-img">
                         <figcaption class="caption">
                             <p class="world">Cool lingerie</p>
                             <p class="price">$56</p>
