--- a/HTML/Hw5/index.html
+++ b/HTML/Hw5/index.html
@@ -52,7 +52,7 @@
                             </figcaption>
                         </figure>
                         <div class="figure-socials">
-                            <figure-socials-icon class="figure-socials-icon">
+                            <div class="figure-socials-icon">
                                 <a href="#" class="icon icon-heart"></a>
                                 <a href="#" class="icon icon-arrows"></a>
                                 <a href="#" class="icon icon-clock"></a>
@@ -60,7 +60,7 @@
                                     <a href="#" class="icon-basket"></a>
                                     <a href="#" class="icon-text">add to cart</a>
                                 </div>
-                            </figure-socials-icon>
+                            </div>
                         </div>
                     </div>
                     <div class="body-figure">
@@ -72,7 +72,7 @@
                             </figcaption>
                         </figure>
                         <div class="figure-socials">
-                            <figure-socials-icon class="figure-socials-icon">
+                            <div class="figure-socials-icon">
                                 <a href="#" class="icon icon-heart"></a>
                                 <a href="#" class="icon icon-arrows"></a>
                                 <a href="#" class="icon icon-clock"></a>
@@ -80,7 +80,7 @@
                                     <a href="#" class="icon-basket"></a>
                                     <a href="#" class="icon-text">add to cart</a>
                                 </div>
-                            </figure-socials-icon>
+                            </div>
                         </div>
                     </div>
                     <div class="body-figure">
@@ -92,7 +92,7 @@
                             </figcaption>
                         </figure>
                         <div class="figure-socials">
-                            <figure-socials-icon class="figure-socials-icon">
+                            <div class="figure-socials-icon">
                                 <a href="#" class="icon icon-heart"></a>
                                 <a href="#" class="icon icon-arrows"></a>
                                 <a href="#" class="icon icon-clock"></a>
@@ -100,7 +100,7 @@
                                     <a href="#" class="icon-basket"></a>
                                     <a href="#" class="icon-text">add to cart</a>
                                 </div>
-                            </figure-socials-icon>
+                            </div>
                         </div>
                     </div>
                     <div class="body-figure">
@@ -112,7 +112,7 @@
                             </figcaption>
                         </figure>
                         <div class="figure-socials">
-                            <figure-socials-icon class="figure-socials-icon">
+                            <div class="figure-socials-icon">
                                 <a href="#" class="icon icon-heart"></a>
                                 <a href="#" class="icon icon-arrows"></a>
                                 <a href="#" class="icon icon-clock"></a>
@@ -120,7 +120,7 @@
                                     <a href="#" class="icon-basket"></a>
                                     <a href="#" class="icon-text">add to cart</a>
                                 </div>
-                            </figure-socials-icon>
+                            </div>
                         </div>
                     </div>
                 </div>
