--- a/HTML/Hw7/index.html
+++ b/HTML/Hw7/index.html
@@ -62,7 +62,7 @@
             <footer class="footer">
                 <h2 class="section-title section-title--contact">Contact us</h2>
                 <p class="section-text">Proin iaculis purus consequat sem cure.</p>
-                <form action="#" class="form">
+                <form class="form" action="#" method="POST">
                     <div class="form-input">
                         <input class="input" type="text" name="text" placeholder="your Name *" required>
                         <input class="input" type="email" name="email" placeholder="your e-mail *" required>
