--- a/resume-project/index.html
+++ b/resume-project/index.html
@@ -20,131 +20,53 @@
             <!-- contacts container -->
             <div class="sidebar-container">
                 <h3 class="sidebar-titles">Contacts</h3>
-                <div>
-                    <span class="sidebar-item-type">C:</span> <a class="sidebar-link" href="tel:380673717082">+38 067
-                        371 70 82</a>
-                </div>
-                <div>
-                    <span class="sidebar-item-type">E:</span> <a class="sidebar-link"
-                        href="mailto:sanialov89@gmail.com">sanialov89@gmail.com</a>
-                </div>
+                <ul>
+                    <li class="sidebar-item"><a class="sidebar-link" href="tel:380673818082">+38 067 381 80 82</a></li>
+                    <li class="sidebar-item"><a class="sidebar-link"
+                            href="Sanialovik89@gmail.com">Sanialovik89@gmail.com</a></li>
+                </ul>
             </div>
             <!-- Tech Skills container -->
             <div class="sidebar-container">
-                <h3 class="sidebar-titles">Tech Skills</h3>
+                <h3 class="sidebar-titles">Skills</h3>
                 <ul>
                     <li class="sidebar-item"><span class="sidebar-item-text">HTML5</span></li>
                     <li class="sidebar-item"><span class="sidebar-item-text">CSS3</span></li>
                     <li class="sidebar-item"><span class="sidebar-item-text">GIT</span></li>
-                    <li class="sidebar-item"><span class="sidebar-item-text">WebPack</span></li>
-                    <li class="sidebar-item"><span class="sidebar-item-text">JavaScript</span></li>
-                    <li class="sidebar-item"><span class="sidebar-item-text">React.js</span></li>
-                    <li class="sidebar-item"><span class="sidebar-item-text">Node.js</span></li>
+                    <li class="sidebar-item"><span class="sidebar-item-text">Bootstrap4</span></li>
+                    <li class="sidebar-item"><span class="sidebar-item-text">BEM</span></li>
+                    <li class="sidebar-item"><span class="sidebar-item-text">SASS</span></li>
                 </ul>
             </div>
-            <!-- Soft Skills container -->
-            <div class="sidebar-container">
-                <h3 class="sidebar-titles">Soft Skills</h3>
-                <ul>
-                    <li class="sidebar-item"><span class="sidebar-item-text">Scrum</span></li>
-                    <li class="sidebar-item"><span class="sidebar-item-text">Agile</span></li>
-                    <li class="sidebar-item"><span class="sidebar-item-text">GTD</span></li>
-                    <li class="sidebar-item"><span class="sidebar-item-text">Teamwork</span></li>
-                </ul>
-            </div>
-
         </aside>
 
         <!-- about me container -->
         <div class="about-me-container">
             <!-- about me main info -->
             <header class="header">
-                <h2 class="header-title">Front-End Developer</h2>
+                <h2 class="header-title">Middle frontend developer</h2>
                 <h1 class="header-name">Oleksandr Lul'ko</h1>
-
-                <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore
-                    et
-                    dolore magna
-                    aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-                    facilisis.</p>
+              
             </header>
 
             <!-- projects container -->
             <section class="section">
                 <h3 class="section-title">Projects</h3>
                 <ol>
-                    <li class="section-item">
-                        <a class="section-link" href="https://lovecamp.allinsol.com/"
-                            target="_blank">https://lovecamp.allinsol.com/</a>
-                        <span class="section-point">......................................</span>
-                        <span class="section-text"><b>[</b> HTML5, CSS3 <b>]</b></span>
-                    </li>
-                    <li class="section-item">
-                        <a class="section-link" href="https://cryptohub.goit.ua/"
-                            target="_blank">https://cryptohub.goit.ua/</a>
-                        <span class="section-point">................................................</span>
-                        <span class="section-text"><b>[</b> JavaScript <b>]</b></span>
-                    </li>
-                    <li class="section-item">
-                        <a class="section-link" href="https://kidslike.goit.co.ua/"
-                            target="_blank">https://kidslike.goit.co.ua/</a>
-                        <span class="section-point">................................................</span>
-                        <span class="section-text"><b>[</b> React.js, Node.js <b>]</b></span>
-                    </li>
+                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Kursova/kursova.html" class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Kursova/kursova.html</a></li>
+                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Hw8/index.html" class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Hw8/index.html</a></li>
+                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Hw6/index.html" class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Hw6/index.html</a></li>
                 </ol>
 
             </section>
-            <!-- Work Experience -->
-            <section class="section">
-
-                <h3 class="section-title">Work Experience</h3>
-
-                <!-- company 1 -->
-                <div>
-                    <h4 class="section-profession">Front-End Developer <span class="section-company">Freelance</span></h4>
-                    <span class="section-time">September 2019 - up to now <span class="section-divider">|</span> Ukraine</span>
-
-                    <ul class="section-duties">
-                        <li class="section-duties-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</li>
-                        <li class="section-duties-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li class="section-duties-item">Risus commodo viverra maecenas.</li>
-                        <li class="section-duties-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li>
-                    </ul>
-                </div>
-
-                <!-- company 2 -->
-                <div>
-                    <h4 class="section-profession">Manager <span class="section-company">Roga & Kopyta New</span></h4>
-                    <span class="section-time">March 2015 - October 2018 <span class="section-divider">|</span> Ukraine</span>
-
-                    <ul class="section-duties">
-                        <li class="section-duties-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore
-                            magna aliqua.</li>
-                        <li class="section-duties-item">Quis ipsum suspendisse ultrices gravida.</li>
-                        <li class="section-duties-item">Risus commodo viverra maecenas.</li>
-                    </ul>
-                </div>
-
-                <!-- company 3 -->
-                <div>
-                    <h4 class="section-profession">Manager <span class="section-company">Roga & Kopyta LLC</span></h4>
-                    <span class="section-time">June 2014 - February 2015 <span class="section-divider">|</span> Ukraine</span>
-
-                    <ul class="section-duties">
-                        <li class="section-duties-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li class="section-duties-item">Quis ipsum suspendisse ultrices gravida.</li>
-                        <li class="section-duties-item">Risus commodo viverra maecenas.</li>
-                    </ul>
-                </div>
-            </section>
+                        
             <!-- Education -->
             <section>
                 <h3 class="section-title">Education</h3>
-                <h4 class="section-education">Kharkiv National University of Radioelectronics</h4>
-                <h5 class="section-education-profession">Management</h5>
-                <span class="section-time">Septermber 2009 - June 2014 <span class="section-divider">|</span> Ukraine</span>
+                <h4 class="section-education">NATIONAL UNIVERSITY OF FOOD TECHNOLOGIES</h4>
+                <h5 class="section-education-profession">Finance, Banking and Insurance</h5>
+                <span class="section-time">Septermber 2009 - January 2013 <span class="section-divider">|</span>
+                    Ukraine</span>
             </section>
 
 
