--- a/resume-project/index.html
+++ b/resume-project/index.html
@@ -44,31 +44,43 @@
         <div class="about-me-container">
             <!-- about me main info -->
             <header class="header">
-                <h2 class="header-title">Middle frontend developer</h2>
+                <h2 class="header-title">HTML-верстальшик</h2>
                 <h1 class="header-name">Oleksandr Lul'ko</h1>
-              
+
             </header>
 
             <!-- projects container -->
             <section class="section">
                 <h3 class="section-title">Projects</h3>
                 <ol>
-                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Kursova/kursova.html" class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Kursova/kursova.html</a></li>
-                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Hw8/index.html" class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Hw8/index.html</a></li>
-                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Hw6/index.html" class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Hw6/index.html</a></li>
+                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Kursova/kursova.html"
+                            class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Kursova/kursova.html</a>
+                    </li>
+                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Hw8/index.html"
+                            class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Hw8/index.html</a></li>
+                    <li class="section-item"><a href="https://sanialovik.github.io/fe-core-hw/HTML/Hw6/index.html"
+                            class="section-link">https://sanialovik.github.io/fe-core-hw/HTML/Hw6/index.html</a></li>
                 </ol>
 
             </section>
-                        
+
             <!-- Education -->
-            <section>
+            <section class="section">
                 <h3 class="section-title">Education</h3>
                 <h4 class="section-education">NATIONAL UNIVERSITY OF FOOD TECHNOLOGIES</h4>
                 <h5 class="section-education-profession">Finance, Banking and Insurance</h5>
                 <span class="section-time">Septermber 2009 - January 2013 <span class="section-divider">|</span>
                     Ukraine</span>
             </section>
-
+            <!-- Languages -->
+            <section>
+                <h3 class="section-title">Languages</h3>
+                <ul>
+                    <li class="section-lenguages">Ukrainian (рідна мова)</li>
+                    <li class="section-lenguages">Russian</li>
+                    <li class="section-lenguages">English (елементарне володіння)</li>
+                </ul>
+            </section>
 
         </div>
     </div>
