--- a/resume-project/index.html
+++ b/resume-project/index.html
@@ -44,7 +44,7 @@
         <div class="about-me-container">
             <!-- about me main info -->
             <header class="header">
-                <h2 class="header-title">HTML-верстальшик</h2>
+                <h2 class="header-title">HTML-верстальщик</h2>
                 <h1 class="header-name">Oleksandr Lul'ko</h1>
 
             </header>
