--- a/resume-project/index.html
+++ b/resume-project/index.html
@@ -44,7 +44,7 @@
         <div class="about-me-container">
             <!-- about me main info -->
             <header class="header">
-                <h2 class="header-title">HTML-верстальщик</h2>
+                <h2 class="header-title">HTML-coder</h2>
                 <h1 class="header-name">Oleksandr Lul'ko</h1>
 
             </header>
@@ -76,9 +76,9 @@
             <section>
                 <h3 class="section-title">Languages</h3>
                 <ul>
-                    <li class="section-lenguages">Ukrainian (рідна мова)</li>
+                    <li class="section-lenguages">Ukrainian</li>
                     <li class="section-lenguages">Russian</li>
-                    <li class="section-lenguages">English (елементарне володіння)</li>
+                    <li class="section-lenguages">English level - elementary</li>
                 </ul>
             </section>
 
