--- a/HTML/Kursova/kursova.html
+++ b/HTML/Kursova/kursova.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="wrapper-header">
+    <div class="wrapper-header" id="home">
         <div class="container">
             <header class="header">
                 <div class="logo">
@@ -21,13 +21,13 @@
                     <h2 class="logo-title">tajam</h2>
                 </div>
                 <ul class="menu">
-                    <li class="menu-item"><a href="" class="menu-link">home</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">about</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">expertise</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">teams</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">works</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">people say</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">contact</a></li>
+                    <li class="menu-item"><a href="#home" class="menu-link">home</a></li>
+                    <li class="menu-item"><a href="#about" class="menu-link">about</a></li>
+                    <li class="menu-item"><a href="#expertise" class="menu-link">expertise</a></li>
+                    <li class="menu-item"><a href="#teams" class="menu-link">teams</a></li>
+                    <li class="menu-item"><a href="#works" class="menu-link">works</a></li>
+                    <li class="menu-item"><a href="#people" class="menu-link">people say</a></li>
+                    <li class="menu-item"><a href="#contact" class="menu-link">contact</a></li>
                 </ul>
             </header>
             <div class="promo">
@@ -51,7 +51,7 @@
         </div>
     </div>
     <main class="content">
-        <div class="wrapper-about">
+        <div class="wrapper-about" id="about">
             <div class="container">
                 <section class="about">
                     <img class="about-img" src="img/Replace with your logo.jpg" alt="big logo">
@@ -80,7 +80,7 @@
                 </section>
             </div>
         </div>
-        <div class="wrapper-expertise">
+        <div class="wrapper-expertise" id="expertise">
             <div class="container">
                 <section class="expertise">
                     <h2 class="expertise-title">expertise</h2>
@@ -139,7 +139,7 @@
                 </section>
             </div>
         </div>
-        <div class="wrapper-team">
+        <div class="wrapper-team" id="teams">
             <div class="container">
                 <section class="team">
                     <h2 class="team-title">meet our amazing team</h2>
@@ -179,7 +179,7 @@
                 </section>
             </div>
         </div>
-        <div class="wrapper-works">
+        <div class="wrapper-works" id="works">
             <div class="container">
                 <section class="works">
                     <div class="works-header">
@@ -204,7 +204,7 @@
             </div>
             <a href="#" class="btn works-btn">load more</a>
         </div>
-        <div class="wrapper-people">
+        <div class="wrapper-people" id="people">
             <div class="container">
                 <section class="people">
                     <a href="" class="people-icon"><svg class="people-svg">
@@ -280,7 +280,7 @@
             </div>
         </div>
     </main>
-    <div class="wrapper-footer">
+    <div class="wrapper-footer" id="contact">
         <div class="container">
             <div class="footer">
                 <div class="footer-left">
